style: restyled the forum from single column to 2 max columns when it's convinient and fixed quill height overflow behaviour

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -66,7 +66,7 @@ header a:hover {
 
 .passedStep:not(:last-child)::after {
     /* @apply absolute content-[''] inline-block w-3 h-22 bg-(--primary-grad-clr) -z-10 left-1/2; */
-    @apply absolute content-[''] inline-block w-1.5 top-10 h-6 bg-(--secondary-grad-clr) left-[calc(50%+0.1875rem)];
+    @apply absolute content-[''] inline-block w-1.5 top-10 h-6.5 bg-(--secondary-grad-clr) left-[calc(50%+0.1875rem)];
 }
 
 .passedStep:not(:first-child)::before {
